Add Paginate Gems

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 collections:
   clubs:
     output: true
+
+plugins:
+  - jekyll-paginate
+  - jekyll-feed
+
+paginate: 2
+paginate_path: "/posts/page:num"
