--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ plugins:
 
 #Jekyll Pagination Settings
 #Not supported by Github Pages.
-autopages:
-  enabled: true
-  collections:
-    enabled: true
+#autopages:
+#  enabled: true
+#  collections:
+#    enabled: true
 
 pagination:
   enabled: true
